Fix alignment of query bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -229,3 +229,7 @@ table {
 .field.is-grouped {
 	margin-left: 1rem;
 }
+
+.button.is-normal {
+	margin-left: 0.2rem;
+}
